# hodeauxledger-rust

./: .gitignore  Cargo.toml  README.md  build-linux.sh  cache.db  cache.sqlite  policy_set.json  request.json  root_auth.json  scope_table.json  test.json
archive/: rhex.rs
docs/: ICONOGRAPHY.md  Preflight Checklist.md  RECORD-TYPES.md  RHEX-STRUCT.md
docs/schema/: authority_grant@0.md  key_grant@0.md  key_revoke@0.md  policy_set@0.md  request_head@0.md  request_rhex@0.md  scope_create@0.md  scope_genesis@0.md  scope_request@0.md
hodeauxledger-core/: Cargo.toml
hodeauxledger-core/src/: lib.rs
hodeauxledger-core/src/crypto/: b64.rs  key.rs  mod.rs
hodeauxledger-core/src/key/: key.rs
hodeauxledger-core/src/policy/: default.rs  mod.rs  policy.rs  rule.rs
hodeauxledger-core/src/rhex/: context.rs  intent.rs  magic.rs  mod.rs  rhex.rs  signature.rs
hodeauxledger-core/src/schema/: field.rs  mod.rs  schema.rs  validate.rs
hodeauxledger-core/src/scope/: alias.rs  authority.rs  mod.rs  scope.rs  table.rs
hodeauxledger-core/src/time/: time.rs
hodeauxledger-core/src/url/: url.rs
hodeauxledger-io/: Cargo.toml
hodeauxledger-io/src/: cache.rs  disk.rs  lib.rs  net.rs  pipe.rs  screen.rs
hodeauxledger-io/src/cache/: aliases.rs  authorities.rs  build.rs  cache.rs  key.rs  mod.rs  policies.rs  rhex.rs  rules.rs  scopes.rs
hodeauxledger-io/src/disk/: authorities.rs  disk.rs  key.rs  mod.rs  rhex.rs  scope.rs
hodeauxledger-proto/: Cargo.toml
hodeauxledger-proto/src/: codec.rs  lib.rs  pipe.rs  transport.rs
hodeauxledger-resolver/: Cargo.toml
hodeauxledger-services/: Cargo.toml
hodeauxledger-services/src/: lib.rs  scope.rs
hodeauxledger-services/src/bootstrap/: scopes.rs
hodeauxledger-services/src/key/: key.rs
hodeauxledger-services/src/net/: authority.rs  mod.rs  send_rhex.rs
hodeauxledger-services/src/process/: key.rs  mod.rs  request.rs  scope.rs
hodeauxledger-services/src/rhex/: append.rs  builder.rs  collector.rs  mod.rs  process.rs  validator.rs
hodeauxledger-services/src/schema/: check.rs
hodeauxledger-services/src/scope/: append.rs  authorities.rs  head.rs  mod.rs  scope.rs
keytool/: Cargo.toml
keytool/src/: argv.rs  crypto.rs  main.rs  sign.rs
ledger/: Cargo.toml
ledger/src/: argv.rs  craft.rs  genesis.rs  main.rs  view.rs
src/: cache.rs  disk.rs  key.rs  lib.rs  main.rs  rhex.rs  rhex_bytes.rs  server.rs
usher/: Cargo.toml
usher/src/: argv.rs  bstrapnet.rs  head.rs  main.rs
usherd/: Cargo.toml
usherd/src/: argv.rs  bootstrap.rs  main.rs  processor.rs
