[package]
name = "hodeauxledger-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_with = "3.14.0"
anyhow = "1.0.99"
serde_cbor = "0.11.2"
serde_bytes = "0.11.17"
serde_json = "1.0"
rand = "0.8.5"
zeroize = "1.8.1"
blake3 = "1.8.2"
ed25519-dalek = { version = "2.0.0", features = ["rand_core"] }
base64 = "0.22.1"
rusqlite = {version = "0.37.0", features = ["bundled"]}
argon2 = "0.5.3"
aes-gcm = "0.10.3"