[package]
name = "hodeauxledger-io"
version = "0.1.0"
edition = "2024"

[dependencies]
owo-colors = "4.2.2"
hodeauxledger-core = { path = "../hodeauxledger-core" }
aes-gcm = "0.10.3"
anyhow = "1.0.99"
argon2 = "0.5.3"
ed25519-dalek = "2.2.0"
zeroize = "1.8.1"
rand = "0.9.2"
serde_cbor = "0.11.2"
serde_json = "1.0.143"
rusqlite = "0.37.0"
serde = "1.0.219"
