[package]
name = "hodeauxledger-proto"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.99"
bytes = "1.10.1"
futures = "0.3.31"
hodeauxledger-core = { path = "../hodeauxledger-core" }
tokio = { version = "1.47.1", features = ["full"] }
tokio-util = { version = "0.7.16", features = ["codec"] }
