[package]
name = "ledger"
version = "0.1.0"
edition = "2024"

[dependencies]
hodeauxledger-core = { path = "../hodeauxledger-core" }
hodeauxledger-io = { path = "../hodeauxledger-io" }
hodeauxledger-proto = { path = "../hodeauxledger-proto" }
clap = { version = "4.5.45", features = ["derive"] }
cursive = "0.21.1"
owo-colors = "4.2.2"
anyhow = "1.0.99"
blake3 = "1.8.2"
serde_json = "1.0"
serde_cbor = "0.11.2"
